--- a/PokedexModular/style.css
+++ b/PokedexModular/style.css
@@ -25,8 +25,9 @@ header {
   padding: 2px;
   background-color: azure;
   height: 200px;
-  width: 230px;
+  width: 300px;
   border-radius: 15px;
+  background: lightcyan;
 }
 
 .divPokemonImg {
