--- a/PokedexModular/style.css
+++ b/PokedexModular/style.css
@@ -13,8 +13,8 @@ header {
   justify-content: center;
   align-items: center;
   height: 150px;
-
   font-family: "Exo 2", sans-serif;
+  background-color: orange;
 }
 
 .curve {
@@ -31,17 +31,64 @@ header h2 {
   color: #705a98;
 }
 
+.div-counter-search {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 50px;
+  background-color: white;
+  border-bottom: solid;
+  border-bottom-color: #374a4a;
+  border-bottom-width: 7px;
+  top: 140px;
+  margin-bottom: 5px;
+}
+
+.div-total-pokemon {
+  color: black;
+}
+
+.div-search {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+
+  background-color: #cecaca;
+  border-radius: 5px;
+  padding: 4px;
+}
+
+.search-icon {
+  background-color: white;
+  border-radius: 50%;
+}
+
+#input-search {
+  border: none;
+  background-color: transparent;
+}
+
+#input-search:focus {
+  outline: none;
+}
+
 .container {
   display: flex;
   justify-content: center;
 }
 
 #pokemon-mosaic-div {
+  position: absolute;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   flex-basis: auto;
-  /* justify-content: space-evenly;*/
+  top: 170px;
+  margin-top: 31px;
+  max-width: 80%;
 }
 
 .div-pokemon {
@@ -60,7 +107,7 @@ header h2 {
 }
 
 .div-pokemon:hover {
-  color: #6b3af8;
+  color: #403e46;
 }
 
 .div-pokemon-id {
